# schrodinger-propagator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  RESULTS.txt
include/: cli.hpp  evolve.hpp  grid.hpp  hamiltonian.hpp  initial.hpp  io.hpp  morse_analytic.hpp  morse_potential.hpp  morse_static.hpp  paths.hpp  runtime_evolution.hpp  snapshots.hpp  taylor.hpp  test_time_reversibility.hpp
include/core/: io_utils.hpp  math_utils.hpp  spectral.hpp  tridiag.hpp  workspace.hpp
include/evolve/: evolve_chebyshev.hpp  evolve_factory.hpp  evolve_rk4.hpp  evolve_taylor.hpp  evolver_base.hpp
results/: morse_eigenstates.csv  morse_energies_anal.csv  morse_energies_num.csv  morse_potential.csv  rk4_dt1e-3_g10_N2001_x20.csv  rk4_dt1e-3_g10_N2001_x20_abs2_wide.csv  rk4_dt1e-5_g10_2001_x20_U0_0.csv  rk4_dt1e-5_g10_N2001_x20_U0_0_eigen_n0_tmax_10.csv  rk4_dt1e-5_g10_N2001_x20_U0_0_k0_0_tmax_10_bez_pola_elektrycznego.csv  rk4_dt1e-5_g10_N2001_x30.csv  rk4_dt1e-5_g10_N2001_x30_U0_0_abs2_wide.csv  rk4_dt1e-5_g10_N2001_x30_U0_150_abs2_wide.csv  rk4_dt1e-5_g10_N2001_x30_abs2_wide.csv  rk4_dt1e-5_g20_N2001_x30.csv  rk4_dt1e-5_g20_N2001_x30_abs2_wide.csv  rk4_dt1e-5_g30_N2001_x30.csv  rk4_dt1e-5_g30_N2001_x30_abs2_wide.csv  taylor_K4_dt1e-5_g10_N2001_x30.csv
results/U0_-1/g10/dt1e-3/: cheb_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_10.csv  cheb_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_100.csv  cheb_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_10_abs2_wide.csv  rk4_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_10.csv  rk4_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_100.csv  rk4_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_10_abs2_wide.csv  taylor_K4_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_10.csv  taylor_K4_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_100.csv  taylor_K4_dt1e-3_g10_N2001_x20_U0_-1_k0_0_tmax_10_abs2_wide.csv
results/U0_-1/g10/dt1e-4/: cheb_dt1e-4_g10_N2001_x20_U0_-1_k0_0_tmax_10.csv  cheb_dt1e-4_g10_N2001_x20_U0_-1_k0_0_tmax_100.csv  rk4_dt1e-4_g10_N2001_x20_U0_-1_k0_0_tmax_10.csv  rk4_dt1e-4_g10_N2001_x20_U0_-1_k0_0_tmax_100.csv  taylor_K4_dt1e-4_g10_N2001_x20_U0_-1_k0_0_tmax_10.csv  (+1 more)
results/morse/g10/: morse_energies_num.csv  morse_potential.csv
results/morse/g20/: morse_eigenstates.csv  morse_energies_anal.csv  morse_energies_num.csv  morse_potential.csv
results/performance/: profile_taylor_vs_rk4.md
scripts/: analyze_theta_debug.py  border.py  check_abs2_wide.py  compare_abs2_pairs.py  plot_abs2_wide.py  plot_cheb_beta.py  plot_compare_methods.py  plot_energy.py  plot_errors_by_stem.py  plot_morse.py  plot_psi_wide.py  plot_ref_density.py  plot_taylor.py  run_cheb.ps1  run_energies.ps1  run_energy_plots.ps1  run_field.ps1  run_plots_all.ps1  run_rk4.ps1  run_series.ps1  run_taylor.ps1  run_theta_debug.ps1  start.txt
src/: cli.cpp  grid.cpp  hamiltonian.cpp  initial.cpp  io.cpp  main.cpp  morse_analytic.cpp  morse_potential.cpp  morse_static.cpp  paths.cpp  reversibility.cpp  runtime_evolution.cpp  snapshots.cpp  taylor.cpp
src/core/: io_utils.cpp  io_utils.hpp  math_utils.cpp  math_utils.hpp  spectral.cpp  spectral.hpp  workspace.hpp
src/evolve/: evolve_chebyshev.cpp  evolve_factory.cpp  evolve_rk4.cpp  evolve_taylor.cpp
(+392 files in other folders)
